fix: prevent page horizontal scroll by setting min-width: 0 on main container

--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -113,6 +113,7 @@
   margin-left: 250px;
   display: flex;
   flex-direction: column;
+  min-width: 0;
 
   @include respond-to('md') {
     margin-left: 80px;
